# rust-energy-meter

./: Cargo.toml  README.md
src/: cli.rs  cmd.rs  main.rs  utils.rs
